--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
